fix card sidebar height on mobile

--- a/src/suits.css
+++ b/src/suits.css
@@ -93,7 +93,7 @@
 
 @media only screen and (max-width: 768px) {
     .suit-icon-container {
-        height: 180px;
+        height: 175px;
     }
 
     .suit-card {
